Fix mobile Favorites delete flyout being covered

--- a/src/modules/favorites/style.css
+++ b/src/modules/favorites/style.css
@@ -39,3 +39,11 @@
 .mobile-menu-arrow {
   margin: 10px 12px 12px 12px;
 }
+
+.mobile-menu-submenu:global(.open)::after {
+  /* OnCampus uses the after pseudoelement to create the darkened 
+   * strip between the submenu and the entire mobile menu
+   * which blocks the delete flyout because of a high z-index.
+  */
+  z-index: unset;
+}
